@@ -38,7 +38,12 @@ mergeFeaturesByRank(x, ...)
 
 \S4method{mergeFeaturesByRank}{SingleCellExperiment}(x, ..., altexp = NULL, strip_altexp = TRUE)
 
-\S4method{agglomerateByRank}{TreeSummarizedExperiment}(x, ..., agglomerateTree = FALSE)
+\S4method{agglomerateByRank}{TreeSummarizedExperiment}(
+  x,
+  ...,
+  agglomerate.tree = agglomerateTree,
+  agglomerateTree = FALSE
+)
 
 \S4method{mergeFeaturesByRank}{TreeSummarizedExperiment}(x, ..., agglomerateTree = FALSE)
 }
@@ -83,9 +88,11 @@ experiments be removed prior to agglomeration? This prevents to many
 nested alternative experiments by default (default:
 \code{strip_altexp = TRUE})}
 
-\item{agglomerateTree}{\code{TRUE} or \code{FALSE}: should
+\item{agglomerate.tree}{\code{TRUE} or \code{FALSE}: should
 \code{rowTree()} also be agglomerated? (Default:
-\code{agglomerateTree = FALSE})}
+\code{agglomerate.tree = FALSE})}
+
+\item{agglomerateTree}{alias for \code{agglomerate.tree}.}
 }
 \value{
 A taxonomically-agglomerated, optionally-pruned object of the same
