@@ -2,6 +2,7 @@
 % Please edit documentation in R/mia.R
 \docType{package}
 \name{mia-package}
+\alias{mia}
 \alias{mia-package}
 \title{\code{mia} Package.}
 \description{
@@ -14,4 +15,28 @@ summarization.
 }
 \seealso{
 \link[TreeSummarizedExperiment:TreeSummarizedExperiment-class]{TreeSummarizedExperiment}
+}
+\author{
+\strong{Maintainer}: Tuomas Borman \email{tuomas.v.borman@utu.fi} (\href{https://orcid.org/0000-0002-8563-8884}{ORCID})
+
+Authors:
+\itemize{
+  \item Felix G.M. Ernst \email{felix.gm.ernst@outlook.com} (\href{https://orcid.org/0000-0001-5064-0928}{ORCID})
+  \item Sudarshan A. Shetty \email{sudarshanshetty9@gmail.com} (\href{https://orcid.org/0000-0001-7280-9915}{ORCID})
+  \item Leo Lahti \email{leo.lahti@iki.fi} (\href{https://orcid.org/0000-0001-5537-637X}{ORCID})
+}
+
+Other contributors:
+\itemize{
+  \item Yang Cao [contributor]
+  \item Nathan D. Olson \email{nolson@nist.gov} [contributor]
+  \item Levi Waldron [contributor]
+  \item Marcel Ramos [contributor]
+  \item Héctor Corrada Bravo [contributor]
+  \item Jayaram Kancherla [contributor]
+  \item Domenick Braccia \email{dbraccia@umd.edu} [contributor]
+  \item Basil Courbayre [contributor]
+  \item Muluh Muluh [contributor]
+}
+
 }
